src/objects/DOL_Integration_Batch_Input__c.object
<CustomObject>
    <description>This is used by Integration batches for DOL system. This table will store the json input of DOL system.</description>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFO__c</fullName>
        <label>INFO</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Input_Type__c</fullName>
        <label>Input Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REMITTANCE</fullName>
                </value>
                <value>
                    <fullName>NCR</fullName>
                </value>
                <value>
                    <fullName>DOR</fullName>
                </value>
				<value>
                    <fullName>RTPC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Input__c</fullName>
        <label>Input</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FAILED</fullName>
                </value>
                <value>
                    <fullName>SUCCESSFUL</fullName>
                </value>
                <value>
                    <fullName>UNPROCESSED</fullName>
                    <default>true</default>
                    <label>UNPROCESSED</label>
                </value>
                <value>
                    <fullName>CONTENT VERSION CREATED</fullName>
                </value>
                <value>
                    <fullName>DATA LOADING COMPLETED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DOL Integration Batch Input</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DOR_Processed</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Input_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>INFO__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Input_Type__c</field>
            <operation>equals</operation>
            <value>DOR</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>UNPROCESSED,FAILED,SUCCESSFUL,CONTENT VERSION CREATED,DATA LOADING COMPLETED</value>
        </filters>
        <label>DOR Processed</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DOL Integration Batch Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DOL Integration Batch Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>